Change input element style

--- a/humblib/src/app/addnote/addnote.component.html
+++ b/humblib/src/app/addnote/addnote.component.html
@@ -2,7 +2,7 @@
   <form class="m-12 text-center" [formGroup]="form" (submit)="onSubmit()">
     <div class="text-emerald-900 text-xl p-2 m-2">New Note</div>
     <div class="mx-auto max-w-xl flex flex-col">
-      <mat-form-field appearance="fill">
+      <mat-form-field>
         <mat-label>Title</mat-label>
         <input
           matInput
