--- a/humblib/src/app/login/login.component.html
+++ b/humblib/src/app/login/login.component.html
@@ -16,7 +16,7 @@
           id="username"
       /></mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field>
         <mat-label for="password">Password</mat-label>
         <input
           matInput
