--- a/humblib/src/app/adbook/adbook.component.html
+++ b/humblib/src/app/adbook/adbook.component.html
@@ -5,7 +5,7 @@
       [formGroup]="form"
       (ngSubmit)="onSubmit()"
     >
-      <mat-form-field appearance="fill">
+      <mat-form-field>
         <mat-label for="name">Book Name</mat-label>
         <input
           matInput
