--- a/humblib/src/styles.scss
+++ b/humblib/src/styles.scss
@@ -19,7 +19,19 @@ body {
   border-right: none !important;
 }
 
+.mat-mdc-snack-bar-container .mdc-snackbar__surface {
+  @apply bg-red-900 #{'!important'};
+}
+
 @include mat.core();
+
+.mat-mdc-snack-bar-container {
+  &.blue-snackbar {
+    --mdc-snackbar-container-color: #2196f3 !important;
+    --mat-mdc-snack-bar-button-color: #fff !important;
+    --mdc-snackbar-supporting-text-color: #fff !important;
+  }
+}
 
 $my-primary: mat.define-palette(mat.$light-green-palette, 900);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
