--- a/humblib/src/app/adbook/adbook.component.html
+++ b/humblib/src/app/adbook/adbook.component.html
@@ -1,7 +1,7 @@
 <div class="container mx-auto">
   <div class="mt-5 flex justify-center">
     <form
-      class="p-5 shadow-lg flex max-w-md items-center justify-center flex-col"
+      class="bg-white rounded-3xl p-9 shadow-2xl border-2 border-emerald-900 flex max-w-md items-center justify-center flex-col"
       [formGroup]="form"
       (ngSubmit)="onSubmit()"
     >
