--- a/humblib/src/app/addnote/addnote.component.html
+++ b/humblib/src/app/addnote/addnote.component.html
@@ -1,6 +1,10 @@
 <div class="container mx-auto">
-  <form class="m-12 text-center" [formGroup]="form" (submit)="onSubmit()">
-    <div class="text-emerald-900 text-xl p-2 m-2">New Note</div>
+  <form
+    class="text-center mt-12 mx-1 bg-white rounded-3xl p-9 shadow-2xl"
+    [formGroup]="form"
+    (submit)="onSubmit()"
+  >
+    <div class="text-emerald-900 text-2xl p-2 m-2">New Note</div>
     <div class="mx-auto max-w-xl flex flex-col">
       <mat-form-field>
         <mat-label>Title</mat-label>
