--- a/humblib/src/app/categorization/categorization.component.html
+++ b/humblib/src/app/categorization/categorization.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-col items-center">
     <div class="flex flex-wrap max-w-3xl">
       <div
-        class="bg-emerald-900 hover:bg-emerald-600 transition flex items-center text-cyan-50 p-2 m-2 rounded-md"
+        class="bg-emerald-900 shadow-2xl hover:bg-emerald-600 transition flex items-center text-cyan-50 p-2 m-2 rounded-md"
         *ngFor="let cat of this.categories"
       >
         <div class="m-2">{{ cat.name }}</div>
@@ -12,7 +12,9 @@
         </button>
       </div>
     </div>
-    <div class="m-2 bg-emerald-300 rounded-md p-4">
+    <div
+      class="bg-white rounded-3xl border-2 border-emerald-900 p-9 shadow-2xl m-2"
+    >
       <form
         class="flex flex-col items-center"
         (submit)="onSubmit()"
