--- a/humblib/src/app/login/login.component.html
+++ b/humblib/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="register container mx-auto">
   <div class="flex mb-48 flex-col items-center justify-center">
     <form
-      class="flex shadow-xl p-12 flex-col items-center"
+      class="flex shadow-2xl bg-white rounded-3xl p-9 border-2 border-emerald-900 flex-col items-center"
       (submit)="onSubmit()"
       [formGroup]="form"
     >
