Add background for menu div

--- a/humblib/src/app/menu/menu.component.html
+++ b/humblib/src/app/menu/menu.component.html
@@ -1,6 +1,8 @@
-<div class="menu mb-48">
-  <div class="container mx-auto flex flex-col">
-    <div class="text-center text-4xl mt-4 text-emerald-900">
+<div class="menu mb-48 mx-2 mt-2">
+  <div
+    class="container mx-auto border-2 border-emerald-900 px-4 py-8 drop-shadow-xl rounded-xl bg-white flex flex-col"
+  >
+    <div class="text-center text-5xl mb-4 text-emerald-900">
       Welcome to your library!
     </div>
     <div class="flex flex-row text-center mx-2 gap-4 flex-wrap">
@@ -10,7 +12,7 @@
         class="flex-1 flex basis-0 justify-center items-center box-border transition"
       >
         <div
-          class="card-list h-52 w-full flex border-emerald-500 flex-col justify-center items-stretch border rounded"
+          class="card-list shadow-2xl h-52 w-full flex border-2 border-emerald-900 flex-col justify-center items-stretch rounded"
         >
           <div matRipple class="subtext text-3xl bg-transparent text-cyan-50">
             List
@@ -25,7 +27,7 @@
         class="flex-1 flex basis-0 justify-center items-center box-border transition"
       >
         <div
-          class="card-cat h-52 w-full flex border-emerald-500 flex-col justify-center items-stretch border rounded"
+          class="card-cat shadow-2xl h-52 w-full flex border-2 border-emerald-900 flex-col justify-center items-stretch rounded"
         >
           <div matRipple class="subtext text-3xl bg-transparent text-cyan-50">
             Categorization
@@ -39,7 +41,7 @@
         class="flex-1 flex basis-0 justify-center items-center box-border transition"
       >
         <div
-          class="card-library h-52 w-full flex border-emerald-500 flex-col justify-center items-stretch border rounded"
+          class="card-library shadow-2xl h-52 w-full flex border-2 border-emerald-900 flex-col justify-center items-stretch rounded"
         >
           <div matRipple class="subtext text-3xl bg-transparent text-cyan-50">
             Library
@@ -51,7 +53,7 @@
         class="flex-1 flex basis-0 justify-center items-center box-border transition"
       >
         <div
-          class="card-note h-52 w-full flex border-emerald-500 flex-col justify-center items-stretch border rounded"
+          class="card-note shadow-2xl h-52 w-full flex border-2 border-emerald-900 flex-col justify-center items-stretch rounded"
         >
           <div mat-ripple class="subtext text-3xl bg-transparent text-cyan-50">
             Notes
