Add background for list and library components

--- a/humblib/src/app/list/list.component.html
+++ b/humblib/src/app/list/list.component.html
@@ -1,5 +1,7 @@
 <div class="container mx-auto">
-  <div class="flex mx-auto flex-col max-w-2xl items-stretch justify-center">
+  <div
+    class="flex mx-auto flex-col max-w-2xl items-stretch bg-white rounded border-2 border-emerald-900 mt-2 justify-center"
+  >
     <div
       class="hover:bg-emerald-900 transition flex items-center bg-emerald-800 text-cyan-50 m-2 rounded-lg"
       *ngFor="let book of this.books"
