--- a/humblib/src/app/addnote/addnote.component.html
+++ b/humblib/src/app/addnote/addnote.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto">
   <form
-    class="text-center mt-12 mx-1 bg-white rounded-3xl p-9 shadow-2xl"
+    class="text-center mt-12 mx-1 bg-white rounded-3xl border-2 border-emerald-900 p-9 shadow-2xl"
     [formGroup]="form"
     (submit)="onSubmit()"
   >
