--- a/humblib/src/app/login/login.component.html
+++ b/humblib/src/app/login/login.component.html
@@ -9,18 +9,16 @@
         ><mat-label>Email</mat-label>
         <input
           matInput
-          required
-          formControlName="username"
+          formControlName="email"
           type="text"
-          name="username"
-          id="username"
+          name="email"
+          id="email"
       /></mat-form-field>
 
       <mat-form-field>
         <mat-label for="password">Password</mat-label>
         <input
           matInput
-          required
           formControlName="password"
           type="password"
           name="password "
