--- a/humblib/src/app/addnote/addnote.component.html
+++ b/humblib/src/app/addnote/addnote.component.html
@@ -5,26 +5,32 @@
     (submit)="onSubmit()"
   >
     <div class="text-emerald-900 text-2xl p-2 m-2">New Note</div>
-    <div class="mx-auto max-w-xl flex flex-col">
+    <div class="mx-auto max-w-xl gap-4 flex flex-col">
       <mat-form-field>
         <mat-label>Title</mat-label>
         <input
+          #title
           matInput
+          maxlength="256"
           formControlName="title"
           type="text"
           name="title"
           id="title"
         />
+        <mat-hint>{{ title.value.length }}/256</mat-hint>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Note</mat-label>
         <textarea
+          maxlength="1500"
+          #note
           matInput
           formControlName="note"
           type="text"
           name="note "
           id="note"
         ></textarea>
+        <mat-hint>{{ note.value.length }}/1500</mat-hint>
       </mat-form-field>
     </div>
 
