--- a/humblib/src/app/note-edit/note-edit.component.html
+++ b/humblib/src/app/note-edit/note-edit.component.html
@@ -6,26 +6,32 @@
     (submit)="onSubmit()"
   >
     <div class="text-emerald-900 text-3xl p-2 m-2">Edit Note</div>
-    <div class="mx-auto max-w-xl flex flex-col">
+    <div class="mx-auto max-w-xl gap-4 flex flex-col">
       <mat-form-field>
         <mat-label>Title</mat-label>
         <input
           matInput
+          #title
+          maxlength="256"
           formControlName="title"
           type="text"
           name="title"
           id="title"
         />
+        <mat-hint>{{ title.value.length }}/256</mat-hint>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Note</mat-label>
         <textarea
+          #note
+          maxlength="1500"
           matInput
           formControlName="note"
           type="text"
           name="note "
           id="note"
         ></textarea>
+        <mat-hint>{{ note.value.length }}/1500</mat-hint>
       </mat-form-field>
     </div>
 
