--- a/humblib/src/app/note-edit/note-edit.component.html
+++ b/humblib/src/app/note-edit/note-edit.component.html
@@ -1,4 +1,5 @@
-<div class="container mx-auto">
+<div *ngIf="loading"><mat-spinner class="mx-auto"></mat-spinner></div>
+<div *ngIf="!loading" class="container mx-auto">
   <form
     style="max-width: 578px"
     class="mx-auto mt-12 border-2 border-emerald-900 bg-white rounded-3xl p-4 text-center"
