--- a/humblib/src/app/booknotes/booknotes.component.html
+++ b/humblib/src/app/booknotes/booknotes.component.html
@@ -1,4 +1,5 @@
-<div class="container mx-auto">
+<div *ngIf="loading"><mat-spinner class="mx-auto"></mat-spinner></div>
+<div *ngIf="!loading && book.name" class="container mx-auto">
   <div class="flex justify-center text-emerald-900 items-center flex-col">
     <div class="text-3xl my-2 bg-emerald-900 text-cyan-50 p-2 rounded">
       {{ book.name }}
