--- a/humblib/src/app/categorization/categorization.component.html
+++ b/humblib/src/app/categorization/categorization.component.html
@@ -1,6 +1,7 @@
 <div class="container mx-auto">
   <div class="flex flex-col items-center">
-    <div class="flex flex-wrap max-w-3xl">
+    <div *ngIf="loading"><mat-spinner></mat-spinner></div>
+    <div *ngIf="!loading" class="flex flex-wrap max-w-3xl">
       <div
         class="bg-emerald-900 shadow-2xl hover:bg-emerald-600 transition flex items-center text-cyan-50 p-2 m-2 rounded-md"
         *ngFor="let cat of this.categories"
