--- a/humblib/src/app/note-detail/note-detail.component.html
+++ b/humblib/src/app/note-detail/note-detail.component.html
@@ -1,4 +1,5 @@
-<div class="container mx-auto">
+<div *ngIf="loading"><mat-spinner class="mx-auto"></mat-spinner></div>
+<div *ngIf="!loading" class="container mx-auto">
   <div class="flex flex-col items-center">
     <mat-card class="max-w-4xl text-emerald-900 p-5 m-2">
       <mat-card-title>
