Add loading indicator to register and login

--- a/humblib/src/app/login/login.component.html
+++ b/humblib/src/app/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="register container mx-auto">
+<div *ngIf="loading"><mat-spinner class="mx-auto"></mat-spinner></div>
+<div *ngIf="!loading" class="register container mx-auto">
   <div class="flex mb-48 flex-col items-center justify-center">
     <form
       class="flex shadow-2xl bg-white rounded-3xl p-9 border-2 border-emerald-900 flex-col items-center"
