--- a/humblib/src/app/register/register.component.html
+++ b/humblib/src/app/register/register.component.html
@@ -1,4 +1,5 @@
-<div class="register container mx-auto">
+<div *ngIf="loading"><mat-spinner class="mx-auto"></mat-spinner></div>
+<div *ngIf="!loading" class="register container mx-auto">
   <div class="flex mb-48 flex-col items-center justify-center">
     <form
       class="flex gap-3 shadow-2xl border-2 border-emerald-900 bg-white rounded-3xl p-9 flex-col items-center"
